<resources>
    <string name="app_name">Fit app</string>
    'tuk promenqm imeto na prilojenieto otgore'
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_settings_">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="register">Register</string>
    <string name="progress">Progress</string>
    <string name="tell_us_more_about_you">Tell us more about you</string>
    <string name="select_gender">Select gender</string>
    <string name="select_your_height">Select your height(CM)</string>
    <string name="select_your_age">Select your age</string>
    <string name="select_meals_per_day">Select meals per day</string>
    <string name="select_your_weight">Select your weight(KG)</string>
    <string name="select_here">Select Here</string>
    <string name="select_your_goal">Select your goal</string>
    <string name="select_activity_level">Select activity level</string>
    <string name="album_name">Fit_app</string>
    <string name="cannot">Cannot</string>
    <string name="btnIntend">Take picture</string>
    <string name="btnIntend1">See your progress</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="dynamic">Enter your measurements to help us dynamically adjust your calories</string>


</resources>
