<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.ivo.fit_app.User_Info_Activity"
    android:background="@drawable/background4">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:text="@string/tell_us_more_about_you"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="65dp"
                android:theme="@style/AppTheme"
                android:text="@string/select_gender"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#FFFFFF"
                app:met_primaryColor="#000000"
                app:met_floatingLabel="normal"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/select_your_goal"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_primaryColor="#000000"
                app:met_floatingLabel="normal"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/select_activity_level"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_floatingLabel="normal"
                app:met_primaryColor="#000000"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/select_meals_per_day"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView4"
                app:layout_constraintRight_toRightOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_floatingLabel="normal"
                app:met_primaryColor="#000000"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/select_your_age"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_floatingLabel="normal"
                app:met_primaryColor="#000000"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>


            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/select_your_weight"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/tvSettings"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_floatingLabel="normal"
                app:met_primaryColor="#000000"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/select_your_height"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.162"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/etUsernameReg"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/select_here"
                android:textColorHint="#CFD8DC"
                app:met_floatingLabel="normal"
                app:met_primaryColor="#000000"
                app:met_baseColor="@color/colorAccent"
                app:met_floatingLabelTextColor="@color/colorAccent"
                app:met_textColor="@color/colorAccent"
                app:met_textColorHint="@color/colorAccent"
                android:popupBackground="@color/colorAccent1"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:text="@string/next"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText9"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1"
                android:background="#4E535B"/>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>